--- a/MyTradeMTG/Views/AdminReports/AssociateList.cshtml
+++ b/MyTradeMTG/Views/AdminReports/AssociateList.cshtml
@@ -118,7 +118,7 @@
                                         <th>Mobile No</th>
                                         <th>Email Id</th>
                                         <th>Member Status</th>
-                                        @*<th>Activation Mode</th>*@
+                                        <th>Activation Date</th>
                                         <th>Action</th>
                                         <th></th>
                                         <th></th>
@@ -145,7 +145,7 @@
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
                                                     <td>@Item.MemberStatus</td>
-                                                    @*<td>@Item.ActivationMode</td>*@
+                                                    <td>@Item.PermanentDate</td>
                                                     <td>
                                                         <a href="/AdminReports/ViewProfileForAdmin?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">Edit</a>
                                                         @*<a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>*@
