--- a/MyTradeMTG/Views/AdminReports/SalesReportsForAdmin.cshtml
+++ b/MyTradeMTG/Views/AdminReports/SalesReportsForAdmin.cshtml
@@ -143,7 +143,7 @@
                                 </div>
                             </div>
                             <div class="table-responsive">
-                                <table id="html5-extension" class="table table-hover non-hover" data-page-length='20'>
+                                <table id="html5-extension" class="table table-hover non-hover" data-sortable="false" data-page-length='20'>
                                     <thead>
                                         <tr>
                                             <th>Sr No.</th>
