--- a/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
+++ b/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
@@ -47,8 +47,8 @@
                                     Business Type
                                     <select id="BusinessType" name="BusinessType" class="default-select wide form-control">
                                         <option value="">All Business</option>
-                                        <option value="1">New Business</option>
-                                        <option value="0">Other Business</option>
+                                        <option value="1">TR-1</option>
+                                        <option value="0">TR-2</option>
                                     </select>
                                 </div>
                             </div>
@@ -75,7 +75,7 @@
 
 
                         <div class="mt-4">
-                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
+                            <table id="html5-extension" class="table table-hover non-hover" data-sortable="false" data-page-length='20'>
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
@@ -104,11 +104,12 @@
                                         @*<th>Print</th>*@
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody class="sorting_desc">
                                     @if (Model != null)
                                     {
                                         if (Model.lsttopupreport != null)
                                         {
+                                            //int i = Convert.ToInt32(Model.Count);
                                             int i = 1;
                                             foreach (var Item in Model.lsttopupreport)
                                             {
@@ -116,7 +117,7 @@
                                                     <td>@i</td>
                                                     @*<td>@Item.LoginId</td>*@
                                                     <td>@Item.DisplayName</td>
-                                                    <td>@Item.Topupid</td>
+                                                    <td>@Item.TopupIDRandom</td>
                                                     <td>@Item.Package</td>
                                                     <td>@Item.PinAmount</td>
                                                     <td>@Item.ActivationMTGToken</td>
@@ -199,10 +200,15 @@
     });
 </script>
 <script>
-    $(document).ready(function () {
-        $('#dataTables-example').DataTable({
-            responsive: true
-        });
+    //$(document).ready(function () {
+    //    $('#dataTables-example').DataTable({
+    //        responsive: true
+    //    });
 
+    //});
+    $(document).ready(function () {
+        $('#html5-extension').DataTable({
+            order: [[3, 'desc']],
+        });
     });
 </script>
