--- a/MyTradeMTG/Views/Downline/AssociateTree.cshtml
+++ b/MyTradeMTG/Views/Downline/AssociateTree.cshtml
@@ -58,7 +58,8 @@
                                                 {
                                                     if (Model.lstPlot != null)
                                                     {
-                                                        int i = 1;
+                                                        int i = Convert.ToInt32(Model.Count);
+                                                        //int i = 1;
                                                         foreach (var Item in Model.lstPlot)
                                                         {
                                                             <tr class="text-left">
