--- a/MyTradeMTG/Views/Shared/_Layout.cshtml
+++ b/MyTradeMTG/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <link href="/UserPanel/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link href="/UserPanel/css/style.css" rel="stylesheet">
     <link href="/UserPanel/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="/UserPanel/vendor/sweetalert2/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="~/plugins/table/datatable/custom_dt_html5.css">
    <link href="~/assets/css/plugins.css" rel="stylesheet" type="text/css" />
     <style>
