--- a/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
+++ b/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
@@ -47,13 +47,15 @@
                                     <span class="text-danger">
                                         @TempData["ROIIncome"]
                                     </span>
+                                   
                                 </div>
                                 <div class="col-lg-4">
                                     <img src="~/MyTradeMTGWebsite/asset/img/wbg.gif" class="img-fluid" style="width:12rem" />
                                 </div>
+                                
                                 <div class="col-sm-4">  
                                     <a href="#" class="btn btn-info btn-sm" style="float:right" onclick="printIt('printableDiv')"><i class="fa fa-download"></i> Download</a>
-                                    @*<a href="/User/TopUpList" class="btn btn-info btn-sm" style="float:right">Back</a>*@
+                                    <a href="/User/TopUpList" class="btn btn-info btn-sm">Back</a>
                                 </div>
                             </div>
                         </div>
