--- a/MyTradeMTG/Views/Franchise/FranchiseDashBoard.cshtml
+++ b/MyTradeMTG/Views/Franchise/FranchiseDashBoard.cshtml
@@ -97,7 +97,7 @@
             <div class="col-xl-6 col-lg-6">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title">Sale Request</h4>
+                        <h4 class="card-title">Buy-Sale Graph</h4>
                     </div>
                     <div class="card-body">
                         <div id="morris_bar" class="morris_chart_height"></div>
